tests/neg-macros/i19851/Test_2.scala
class Test:
  def t1: Unit =
    Box.pack[Int] // error
